perf(site): vendor Inter and JetBrains Mono fonts
- Self-host fonts instead of loading from Google Fonts
- Preload critical font files for faster FCP/LCP
- Remove external DNS lookup and connection to fonts.googleapis.com
- Eliminates ~100ms latency from font loading

--- a/site/style.css
+++ b/site/style.css
@@ -1,5 +1,30 @@
 /* genX Promotional Site - Muji Style */
 
+/* Vendored fonts - self-hosted for performance */
+@font-face {
+  font-family: 'Inter';
+  src: url('/fonts/inter-regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url('/fonts/inter-light.woff2') format('woff2');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'JetBrains Mono';
+  src: url('/fonts/jetbrainsmono-regular.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
 /* Font metric overrides to eliminate CLS during font swap */
 @font-face {
   font-family: 'Inter-fallback';
